# event_handler

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/api/: events.py  schema.py  sensors.py
app/db/: client.py  models.py
tests/: conftest.py  events.json
tests/api/: test_events.py  test_sensors.py
